--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -986,3 +986,10 @@
  STATE_985:0 "Toulouse"
  STATE_986:0 "Nice"
  STATE_987:0 "Frankfurt"
+ STATE_988: "Lesotho"
+ STATE_989: "Eswatini"
+ STATE_990: "Kivu"
+ STATE_991: "Orientale"
+ STATE_992: "Zanzibar"
+ STATE_993: "Tabora"
+ STATE_994: "Ruvuma"
