--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1314,3 +1314,10 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_958: "Avignon"
  VICTORY_POINTS_641: "Oyonnax"
  VICTORY_POINTS_3488: "Eupen"
+ VICTORY_POINTS_4556: "Maseru"
+ VICTORY_POINTS_7900: "Mbabane"
+ VICTORY_POINTS_13376: "Zanzibar City"
+ VICTORY_POINTS_10845: "Songea"
+ VICTORY_POINTS_12944: "Mtwara"
+ VCITORY_POINTS_10932: "Tabora"
+ VICTORY_POINTS_8183: "Tanga"
