--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -273,7 +273,7 @@
  STATE_272:0 "Senegal"
  STATE_273:0 "Libyan Desert"
  STATE_274:0 "Ghana"
- STATE_275:0 "Transvaal"
+ STATE_275:0 "Gauteng"
  STATE_276:0 "Southern Ontario"
  STATE_277:0 "Mexico City"
  STATE_278:0 "Buenos Aires"
@@ -540,10 +540,10 @@
  STATE_539:0 "Gabon"
  STATE_540:0 "Luanda"
  STATE_541:0 "Khomas"
- STATE_542:0 "Bechuanaland"
+ STATE_542:0 "Kweneng District"
  STATE_543:0 "Madagascar"
  STATE_544:0 "Lourenço Marques"
- STATE_545:0 "Rhodesia"
+ STATE_545:0 "Matabeleland"
  STATE_546:0 "Tanganyika"
  STATE_547:0 "Nairobi"
  STATE_548:0 "Uganda"
@@ -679,7 +679,7 @@
  STATE_678:0 "Rub al Khali"
  STATE_679:0 "Madinah"
  STATE_680:0 "Deir-az-Zur"
- STATE_681:0 "Cape"
+ STATE_681:0 "Southern Cape"
  STATE_682:0 "Northern Ontario"
  STATE_683:0 "Nunavut"
  STATE_684:0 "Caroline Islands"
@@ -993,3 +993,10 @@
  STATE_992: "Zanzibar"
  STATE_993: "Tabora"
  STATE_994: "Ruvuma"
+ STATE_995: "Skeleton Coast"
+ STATE_996: "Caprivi Strip"
+ STATE_997: "South Skeleton Coast"
+ STATE_998: "Free State"
+ STATE_999: "Northern Cape"
+ STATE_1000: "Central District"
+ STATE_1001: "Mashonaland"
