--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -495,12 +495,11 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_650:0 "Santiago"
  VICTORY_POINTS_10400:0 "Pretoria"
  VICTORY_POINTS_1468:0 "Durban"
- VICTORY_POINTS_4696:0 "Port Elizabeth"
+ VICTORY_POINTS_4696:0 "Gqeberha"
  VICTORY_POINTS_12589:0 "Cape Town"
  VICTORY_POINTS_8245:0 "Lourenco Marques"
  VICTORY_POINTS_8248:0 "Luanda"
  VICTORY_POINTS_10966:0 "Nova Lisboa"
- VICTORY_POINTS_10929:0 "Salisbury"
  VICTORY_POINTS_191:0 "Elisabethville"
  VICTORY_POINTS_5117:0 "Léopoldville"
  VICTORY_POINTS_5139:0 "Libreville"
@@ -1321,3 +1320,11 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_12944: "Mtwara"
  VCITORY_POINTS_10932: "Tabora"
  VICTORY_POINTS_8183: "Tanga"
+ VICTORY_POINTS_1181: "Mangobo"
+ VICTORY_POINTS_8136: "Tsumeb"
+ VICTORY_POINTS_10957: "Otjiwarongo"
+ VICTORY_POINTS_5231: "Bloemfontein"
+ VICTORY_POINTS_1509: "Kimberley"
+ VICTORY_POINTS_13385: "Francistown"
+ VICTORY_POINTS_4851: "Bulawayo"
+ VICTORY_POINTS_13388: "Harare"
