--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -612,7 +612,7 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_8127: "Yinchuan"
  VICTORY_POINTS_12758:0 "Medina"
  VICTORY_POINTS_12883:0 "Jeddah"
- VICTORY_POINTS_12991:1 "Mogadiscio"
+ VICTORY_POINTS_12991:1 "Mogadishu"
  VICTORY_POINTS_6318:0 "Manchester"
  VICTORY_POINTS_11405:0 "Zaporozhe"
  VICTORY_POINTS_11561:1 "Kryvyi Rih"
@@ -1327,4 +1327,7 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_1509: "Kimberley"
  VICTORY_POINTS_13385: "Francistown"
  VICTORY_POINTS_4851: "Bulawayo"
- VICTORY_POINTS_13388: "Harare"
+ VICTORY_POINTS_13388: "Harare" 
+ VICTORY_POINTS_10928: "Barawa"
+ VICTORY_POINTS_2063: "Baidoa"
+ VICTORY_POINTS_13389: "Garoowe"
