--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -266,8 +266,8 @@
  STATE_265:0 "Mikhaylovka"
  STATE_266:0 "Tehran"
  STATE_267:0 "Kabul"
- STATE_268:0 "French Somaliland"
- STATE_269:0 "British Somaliland"
+ STATE_268:0 "Djibouti"
+ STATE_269:0 "Somaliland"
  STATE_270:0 "Pitcairn Island"
  STATE_271:0 "Shewa"
  STATE_272:0 "Senegal"
@@ -557,7 +557,7 @@
  STATE_556:0 "Bamako"
  STATE_557:0 "Mauritania"
  STATE_558:0 "Lagos"
- STATE_559:0 "Somaliland"
+ STATE_559:0 "Galmudug"
  STATE_560:0 "Nikolayevsk"
  STATE_561:0 "Amur"
  STATE_562:0 "Okhotsk"
@@ -1000,3 +1000,5 @@
  STATE_999: "Northern Cape"
  STATE_1000: "Central District"
  STATE_1001: "Mashonaland"
+ STATE_1002: "Koonfur Galbeed"
+ STATE_1003: "Puntland"
