Added some custom music.

--- a/localisation/english/loading_tips_l_english.yml
+++ b/localisation/english/loading_tips_l_english.yml
@@ -1,2 +1,5 @@
 ﻿l_english:
  LOADING_TIP_0: "War, War never changes.\n- Devs"
+ LOADING_TIP_1: "Sooner or later the endless spectacle is over. Then we will take revenge; mercilessly.\n- Alexander Dugin"
+ LOADING_TIP_2: "The higher up and more authoritarian the ruler, the closer he is to the masses and the more stable his rule.\n- Alexander Dugin"
+ LOADING_TIP_3: "If you are in favour of global liberal hegemony, you are the enemy.\n- Alexander Dugin"
