--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -500,8 +500,6 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_8245:0 "Lourenco Marques"
  VICTORY_POINTS_8248:0 "Luanda"
  VICTORY_POINTS_10966:0 "Nova Lisboa"
- VICTORY_POINTS_191:0 "Elisabethville"
- VICTORY_POINTS_5117:0 "Léopoldville"
  VICTORY_POINTS_5139:0 "Libreville"
  VICTORY_POINTS_8193:0 "Brazzaville"
  VICTORY_POINTS_5210:0 "Mombasa"
@@ -693,7 +691,6 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_12333:1 "Ashkhabad"
  VICTORY_POINTS_12583:1 "Frunze"
  VICTORY_POINTS_3707:1 "Chisinău"
- VICTORY_POINTS_5128:0 "Antananarivo"
  VICTORY_POINTS_11984:0 "Nicosia"
  VICTORY_POINTS_13215:0 "Mexicali"
  VICTORY_POINTS_6241:0 "Utrecht"
@@ -1331,3 +1328,13 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_10928: "Barawa"
  VICTORY_POINTS_2063: "Baidoa"
  VICTORY_POINTS_13389: "Garoowe"
+ VICTORY_POINTS_5128: "Antananarivo"
+ VICTORY_POINTS_10993: "Fianarantsoa"
+ VICTORY_POINTS_191: "Lubumbashi"
+ VICTORY_POINTS_5117: "Kinshasa"
+ VICTORY_POINTS_13395: "Tshikapa"
+ VICTORY_POINTS_12896: "Kikwit"
+ VICTORY_POINTS_2024: "Mbuji-Mayi"
+ VICTORY_POINTS_2154: "Isiro"
+ VICTORY_POINTS_13400: "Rungu"
+ VICTORY_POINTS_10883: "Lisala"
