--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -293,7 +293,7 @@
  STATE_292:0 "Nejd"
  STATE_293:0 "Yemen"
  STATE_294:0 "Oman"
- STATE_295:0 "Leopoldville"
+ STATE_295:0 "Kwilu"
  STATE_296:0 "Portuguese Guinea"
  STATE_297:0 "Equatorial Guinea"
  STATE_298:0 "Liberia"
@@ -536,12 +536,12 @@
  STATE_535:0 "Koshinetsu"
  STATE_536:0 "Hokkaido"
  STATE_537:0 "South Sakhalin"
- STATE_538:0 "Coquilhatville"
+ STATE_538:0 "Ubangi"
  STATE_539:0 "Gabon"
  STATE_540:0 "Luanda"
  STATE_541:0 "Khomas"
  STATE_542:0 "Kweneng District"
- STATE_543:0 "Madagascar"
+ STATE_543:0 "South Madagascar"
  STATE_544:0 "Lourenço Marques"
  STATE_545:0 "Matabeleland"
  STATE_546:0 "Tanganyika"
@@ -716,7 +716,7 @@
  STATE_715:0 "Liaoning"
  STATE_716:0 "Liaotung"
  STATE_717:0 "Sungkiang"
- STATE_718:0 "Stanleyville"
+ STATE_718:0 "Tshopo"
  STATE_719:0 "Natal"
  STATE_720:0 "South Georgia"
  STATE_721:0 "Portuguese Timor"
@@ -886,9 +886,9 @@
  STATE_885:0 "Bahr al Ghazal"
  STATE_886:0 "Blue Nile"
  STATE_887:0 "South Darfur"
- STATE_888:0 "Lusambo"
- STATE_889:0 "Elisabethville"
- STATE_890:0 "Costermansville"
+ STATE_888:0 "Kasaï-Oriental"
+ STATE_889:0 "Kantanga"
+ STATE_890:0 "Maniema"
  STATE_891:0 "Zambesi"
  STATE_892:0 "South West Angola"
  STATE_893:0 "Karas"
@@ -1002,3 +1002,9 @@
  STATE_1001: "Mashonaland"
  STATE_1002: "Koonfur Galbeed"
  STATE_1003: "Puntland"
+ STATE_1004: "North Madagascar"
+ STATE_1005: "Mayotte"
+ STATE_1006: "Kongo"
+ STATE_1007: "Kasaï"
+ STATE_1008: "Wamba"
+ STATE_1009: "Haut-Uélé"
