USA - East of the Mississippi (States+VP+POP)

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -355,8 +355,8 @@
  STATE_354:0 "Trabzon"
  STATE_355:0 "Samsun"
  STATE_356:0 "Kastamonu"
- STATE_357:0 "New England"
- STATE_358:0 "New York"
+ STATE_357:0 "Connecticut"
+ STATE_358:0 "Buffalo"
  STATE_359:0 "New Jersey"
  STATE_360:0 "Pennsylvania"
  STATE_361:0 "Maryland"
@@ -1008,3 +1008,13 @@
  STATE_1007: "Kasaï"
  STATE_1008: "Wamba"
  STATE_1009: "Haut-Uélé"
+ STATE_1010: "Maine"
+ STATE_1011: "New Hampshire"
+ STATE_1012: "Vermont"
+ STATE_1013: "Massachusetts"
+ STATE_1014: "Rhode Island"
+ STATE_1015: "New York"
+ STATE_1016: "Albany"
+ STATE_1017: "Philadelphia"
+ STATE_1018: "Delaware"
+ STATE_1019: "Washington DC"
