--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -582,7 +582,6 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_9108:0 "Luleå"
  VICTORY_POINTS_9147: "Haparanda"
  VICTORY_POINTS_9458:0 "Portsmouth"
- VICTORY_POINTS_9832:0 "Providence"
  VICTORY_POINTS_9907:1 "Firenze"
  VICTORY_POINTS_9945:1 "Ceuta"
  VICTORY_POINTS_9974:0 "Ningbo"
@@ -627,7 +626,7 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_11752:0 "Zhangbei"
  VICTORY_POINTS_7418:0 "Xi'an"
  VICTORY_POINTS_4879:0 "Windhoek"
- VICTORY_POINTS_10412:0 "Richmond"
+ VICTORY_POINTS_11841:0 "Richmond" #Moved from 10412
  VICTORY_POINTS_12715:0 "Mérida"
  VICTORY_POINTS_4904:0 "Campeche"
  VICTORY_POINTS_1900:0 "Tuxtla Gutiérrez"
@@ -1338,3 +1337,72 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_2154: "Isiro"
  VICTORY_POINTS_13400: "Rungu"
  VICTORY_POINTS_10883: "Lisala"
+ VICTORY_POINTS_3732: "Portland"
+ VICTORY_POINTS_7462: "Lewiston"
+ VICTORY_POINTS_3712: "Concord"
+ VICTORY_POINTS_7629: "Montpelier"
+ VICTORY_POINTS_3710: "Worcester"
+ VICTORY_POINTS_908: "Springfield"
+ VICTORY_POINTS_905: "New Bedford"
+ VICTORY_POINTS_13391: "Providence"
+ VICTORY_POINTS_6909: "New Haven"
+ VICTORY_POINTS_11830: "Hartford"
+ VICTORY_POINTS_9693: "Albany"
+ VICTORY_POINTS_9795: "Watertown"
+ VICTORY_POINTS_9708: "Utica"
+ VICTORY_POINTS_6717: "Binghampton"
+ VICTORY_POINTS_3702: "Syracuse"
+ VICTORY_POINTS_3733: "Rochester"
+ VICTORY_POINTS_11782: "Trenton"
+ VICTORY_POINTS_9801: "Toms River"
+ VICTORY_POINTS_11785: "Harrisburg"
+ VICTORY_POINTS_11799: "Allentown"
+ VICTORY_POINTS_3687: "Erie"
+ VICTORY_POINTS_3897: "Scranton"
+ VICTORY_POINTS_9786: "Dover"
+ VICTORY_POINTS_13401: "Wilmington"
+ VICTORY_POINTS_6929: "Frederick"
+ VICTORY_POINTS_873: "Alexandria"
+ VICTORY_POINTS_1506: "Roanoke"
+ VICTORY_POINTS_1132: "Wilmington"
+ VICTORY_POINTS_7643: "Asheville"
+ VICTORY_POINTS_12445: "Greenboro"
+ VICTORY_POINTS_11783: "Durham"
+ VICTORY_POINTS_4653: "Greenville"
+ VICTORY_POINTS_11975: "Savannah"
+ VICTORY_POINTS_7118: "Augusta"
+ VICTORY_POINTS_638: "Athens"
+ VICTORY_POINTS_12498: "Columbus"
+ VICTORY_POINTS_9834: "West Palm Beach"
+ VICTORY_POINTS_12752: "Fort Myers"
+ VICTORY_POINTS_7388: "Tampa"
+ VICTORY_POINTS_866: "Orlando"
+ VICTORY_POINTS_1572: "Jacksonville"
+ VICTORY_POINTS_10352: "Pensacola"
+ VICTORY_POINTS_10407: "Tallahassee"
+ VICTORY_POINTS_4601: "Cincinnati"
+ VICTORY_POINTS_6874: "Akron"
+ VICTORY_POINTS_11776: "Dayton"
+ VICTORY_POINTS_689: "Toledo"
+ VICTORY_POINTS_801: "Morgantown"
+ VICTORY_POINTS_6769: "Lansing"
+ VICTORY_POINTS_11714: "Grand Rapids"
+ VICTORY_POINTS_4854: "Marquette"
+ VICTORY_POINTS_870: "Fort Wayne"
+ VICTORY_POINTS_10448: "Bloomington"
+ VICTORY_POINTS_11635: "Evansville"
+ VICTORY_POINTS_9727: "Lexington"
+ VICTORY_POINTS_6972: "Bowling Green"
+ VICTORY_POINTS_10657: "Knoxville"
+ VICTORY_POINTS_12670: "Clarksville"
+ VICTORY_POINTS_7797: "Memphis"
+ VICTORY_POINTS_10909: "Chattanooga"
+ VICTORY_POINTS_492: "Montgomery"
+ VICTORY_POINTS_5059: "Huntsville"
+ VICTORY_POINTS_10449: "Jackson"
+ VICTORY_POINTS_12312: "Rockford"
+ VICTORY_POINTS_12368: "Naperville"
+ VICTORY_POINTS_10339: "Peoria"
+ VICTORY_POINTS_12497: "Springfield"
+ VICTORY_POINTS_12456: "Maddison"
+ VICTORY_POINTS_4166: "Green Bay"
