--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -542,7 +542,7 @@
  STATE_541:0 "Khomas"
  STATE_542:0 "Kweneng District"
  STATE_543:0 "South Madagascar"
- STATE_544:0 "Lourenço Marques"
+ STATE_544:0 "Gaza-Moçambique"
  STATE_545:0 "Matabeleland"
  STATE_546:0 "Tanganyika"
  STATE_547:0 "Nairobi"
@@ -768,7 +768,7 @@
  STATE_767:0 "North Darfur"
  STATE_768:0 "Rwanda"
  STATE_769:0 "Burundi"
- STATE_770:0 "Malawi"
+ STATE_770:0 "Lilongwe"
  STATE_771:0 "Zambia"
  STATE_772:0 "Middle Congo"
  STATE_773:0 "Cameroon"
@@ -894,7 +894,7 @@
  STATE_893:0 "Karas"
  STATE_894:0 "Kunene"
  STATE_895:0 "Otjozondjupa"
- STATE_896:0 "Manica e Sofala"
+ STATE_896:0 "Norte de Manica e Sofala"
  STATE_897:0 "Zambezia-Moçambique"
  STATE_898:0 "Gao"
  STATE_899:0 "Kayes-Koulikoro"
@@ -1018,3 +1018,10 @@
  STATE_1017: "Philadelphia"
  STATE_1018: "Delaware"
  STATE_1019: "Washington DC"
+ STATE_1020: "Blantyre"
+ STATE_1021: "Tete"
+ STATE_1022: "Sul de Manica e Sofala"
+ STATE_1023: "Inhambane"
+ STATE_1024: "Maputo"
+ STATE_1025: "Niassa"
+ STATE_1026: "Cabo Delgado"
