--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -497,7 +497,6 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_1468:0 "Durban"
  VICTORY_POINTS_4696:0 "Gqeberha"
  VICTORY_POINTS_12589:0 "Cape Town"
- VICTORY_POINTS_8245:0 "Lourenco Marques"
  VICTORY_POINTS_8248:0 "Luanda"
  VICTORY_POINTS_10966:0 "Nova Lisboa"
  VICTORY_POINTS_5139:0 "Libreville"
@@ -1406,3 +1405,14 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_12497: "Springfield"
  VICTORY_POINTS_12456: "Maddison"
  VICTORY_POINTS_4166: "Green Bay"
+ VICTORY_POINTS_13402: "Blantyre"
+ VICTORY_POINTS_8245: "Maputo"
+ VICTORY_POINTS_13403: "Tete"
+ VICTORY_POINTS_2120: "Beira"
+ VICTORY_POINTS_13405: "Chimoio"
+ VICTORY_POINTS_5212: "Xai-Xai"
+ VICTORY_POINTS_2193: "Vilankulos"
+ VICTORY_POINTS_12971: "Quelimane"
+ VICTORY_POINTS_2123: "Nampula"
+ VICTORY_POINTS_13408: "Pemba"
+ VICTORY_POINTS_10972: "Lichinga"
