--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -161,8 +161,8 @@
  STATE_160:0 "Veneto"
  STATE_161:0 "Emilia Romagna"
  STATE_162:0 "Toscana"
- STATE_163:0 "Zara"
- STATE_164:0 "Dodecaneso"
+ STATE_163:1 "STATE_163_ITA"
+ STATE_164:1 "STATE_164_ITA"
  STATE_165:0 "Cataluña"
  STATE_166:0 "Western Aragón"
  STATE_167:0 "Valencia"
@@ -986,42 +986,53 @@
  STATE_985:0 "Toulouse"
  STATE_986:0 "Nice"
  STATE_987:0 "Frankfurt"
- STATE_988: "Lesotho"
- STATE_989: "Eswatini"
- STATE_990: "Kivu"
- STATE_991: "Orientale"
- STATE_992: "Zanzibar"
- STATE_993: "Tabora"
- STATE_994: "Ruvuma"
- STATE_995: "Skeleton Coast"
- STATE_996: "Caprivi Strip"
- STATE_997: "South Skeleton Coast"
- STATE_998: "Free State"
- STATE_999: "Northern Cape"
- STATE_1000: "Central District"
- STATE_1001: "Mashonaland"
- STATE_1002: "Koonfur Galbeed"
- STATE_1003: "Puntland"
- STATE_1004: "North Madagascar"
- STATE_1005: "Mayotte"
- STATE_1006: "Kongo"
- STATE_1007: "Kasaï"
- STATE_1008: "Wamba"
- STATE_1009: "Haut-Uélé"
- STATE_1010: "Maine"
- STATE_1011: "New Hampshire"
- STATE_1012: "Vermont"
- STATE_1013: "Massachusetts"
- STATE_1014: "Rhode Island"
- STATE_1015: "New York"
- STATE_1016: "Albany"
- STATE_1017: "Philadelphia"
- STATE_1018: "Delaware"
- STATE_1019: "Washington DC"
- STATE_1020: "Blantyre"
- STATE_1021: "Tete"
- STATE_1022: "Sul de Manica e Sofala"
- STATE_1023: "Inhambane"
- STATE_1024: "Maputo"
- STATE_1025: "Niassa"
- STATE_1026: "Cabo Delgado"
+ STATE_988:0 "Lesotho"
+ STATE_989:0 "Eswatini"
+ STATE_990:0 "Kivu"
+ STATE_991:0 "Orientale"
+ STATE_992:0 "Zanzibar"
+ STATE_993:0 "Tabora"
+ STATE_994:0 "Ruvuma"
+ STATE_995:0 "Skeleton Coast"
+ STATE_996:0 "Caprivi Strip"
+ STATE_997:0 "South Skeleton Coast"
+ STATE_998:0 "Free State"
+ STATE_999:0 "Northern Cape"
+ STATE_1000:0 "Central District"
+ STATE_1001:0 "Mashonaland"
+ STATE_1002:0 "Koonfur Galbeed"
+ STATE_1003:0 "Puntland"
+ STATE_1004:0 "North Madagascar"
+ STATE_1005:0 "Mayotte"
+ STATE_1006:0 "Kongo"
+ STATE_1007:0 "Kasaï"
+ STATE_1008:0 "Wamba"
+ STATE_1009:0 "Haut-Uélé"
+ STATE_1010:0 "Maine"
+ STATE_1011:0 "New Hampshire"
+ STATE_1012:0 "Vermont"
+ STATE_1013:0 "Massachusetts"
+ STATE_1014:0 "Rhode Island"
+ STATE_1015:0 "New York"
+ STATE_1016:0 "Albany"
+ STATE_1017:0 "Philadelphia"
+ STATE_1018:0 "Delaware"
+ STATE_1019:0 "Washington DC"
+ STATE_1020:0 "Blantyre"
+ STATE_1021:0 "Tete"
+ STATE_1022:0 "Sul de Manica e Sofala"
+ STATE_1023:0 "Inhambane"
+ STATE_1024:0 "Maputo"
+ STATE_1025:0 "Niassa"
+ STATE_1026:0 "Cabo Delgado"
+ STATE_1027:0 "Wakayama"
+ STATE_1028:0 "Miyagi"
+ STATE_1029:0 "Tochigi"
+ STATE_1030:0 "Shizuoka"
+ STATE_1031:0 "Tottori"
+ STATE_1032:0 "Sikkim"
+ STATE_1033:0 "Kunduz"
+ STATE_1034:0 "Jawzjan"
+ STATE_1035:0 "Uruzgan"
+ STATE_1036:0 "South Karnataka"
+ STATE_1037:0 "Telangana"
