--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -538,7 +538,7 @@
  STATE_537:0 "South Sakhalin"
  STATE_538:0 "Ubangi"
  STATE_539:0 "Gabon"
- STATE_540:0 "Luanda"
+ STATE_540: "Luanda"
  STATE_541:0 "Khomas"
  STATE_542:0 "Kweneng District"
  STATE_543:0 "South Madagascar"
@@ -769,7 +769,7 @@
  STATE_768:0 "Rwanda"
  STATE_769:0 "Burundi"
  STATE_770:0 "Lilongwe"
- STATE_771:0 "Zambia"
+ STATE_771:0 "Barotseland"
  STATE_772:0 "Middle Congo"
  STATE_773:0 "Cameroon"
  STATE_774:0 "Chad"
@@ -794,7 +794,7 @@
  STATE_793:0 "Guadalajara"
  STATE_794:0 "Eastern Aragón"
  STATE_795:0 "Santarém"
- STATE_796:0 "North Angola"
+ STATE_796: "Cabinda"
  STATE_797:0 "Istanbul"
  STATE_798:0 "Amasya"
  STATE_799:0 "Hatay"
@@ -889,8 +889,8 @@
  STATE_888:0 "Kasaï-Oriental"
  STATE_889:0 "Kantanga"
  STATE_890:0 "Maniema"
- STATE_891:0 "Zambesi"
- STATE_892:0 "South West Angola"
+ STATE_891: "Moxico"
+ STATE_892: "Namibe"
  STATE_893:0 "Karas"
  STATE_894:0 "Kunene"
  STATE_895:0 "Otjozondjupa"
@@ -1036,3 +1036,13 @@
  STATE_1035:0 "Uruzgan"
  STATE_1036:0 "South Karnataka"
  STATE_1037:0 "Telangana"
+ STATE_1038: "Luangwa"
+ STATE_1039: "Luapula"
+ STATE_1040: "Lusaka"
+ STATE_1041: "Rivungo"
+ STATE_1042: "Cuando Cubango"
+ STATE_1043: "Alto Zambeze"
+ STATE_1044: "Lunda"
+ STATE_1045: "Cunene"
+ STATE_1046: "Cuanza"
+ STATE_1047: "West Lunda"
