--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -498,7 +498,6 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_4696:0 "Gqeberha"
  VICTORY_POINTS_12589:0 "Cape Town"
  VICTORY_POINTS_8248:0 "Luanda"
- VICTORY_POINTS_10966:0 "Nova Lisboa"
  VICTORY_POINTS_5139:0 "Libreville"
  VICTORY_POINTS_8193:0 "Brazzaville"
  VICTORY_POINTS_5210:0 "Mombasa"
@@ -959,7 +958,6 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_924:0 "Santarém"
  VICTORY_POINTS_6933:0 "Beja"
  VICTORY_POINTS_970:0 "Setúbal"
- VICTORY_POINTS_2115:0 "Namibe"
  VICTORY_POINTS_3916:0 "Erbil"
  VICTORY_POINTS_6826:0 "Sulaymaniyah"
  VICTORY_POINTS_12413:0 "Rumadiyah"
@@ -1416,3 +1414,20 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_2123: "Nampula"
  VICTORY_POINTS_13408: "Pemba"
  VICTORY_POINTS_10972: "Lichinga"
+ VICTORY_POINTS_13412: "Chipata"
+ VICTORY_POINTS_10594: "Mansa"
+ VICTORY_POINTS_7872: "Livingstone"
+ VICTORY_POINTS_12504: "Kitwe"
+ VICTORY_POINTS_13413: "Rivungo"
+ VICTORY_POINTS_2115: "Cabinda"
+ VICTORY_POINTS_8054: "Cazombo"
+ VICTORY_POINTS_13415: "Cuito Cuanavale"
+ VICTORY_POINTS_10966: "Huambo"
+ VICTORY_POINTS_12985: "Moçâmedes"
+ VICTORY_POINTS_13424: "Ondjiva"
+ VICTORY_POINTS_1552: "Luena"
+ VICTORY_POINTS_13418: "Dundo"
+ VICTORY_POINTS_7548: "Saurimo"
+ VICTORY_POINTS_5158: "Sumbe"
+ VICTORY_POINTS_13416: "Cafunfo"
+ VICTORY_POINTS_8138: "Lubango"
