Lower 48 states -California done

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1431,3 +1431,62 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_5158: "Sumbe"
  VICTORY_POINTS_13416: "Cafunfo"
  VICTORY_POINTS_8138: "Lubango"
+ VICTORY_POINTS_4664: "Rochester"
+ VICTORY_POINTS_6752: "St Cloud"
+ VICTORY_POINTS_1734: "Duluth"
+ VICTORY_POINTS_7306: "Cedar Rapids"
+ VICTORY_POINTS_10478: "Davenport"
+ VICTORY_POINTS_12646: "Sioux City"
+ VICTORY_POINTS_1441: "Columbia"
+ VICTORY_POINTS_1534: "Joplin"
+ VICTORY_POINTS_4567: "Fayetteville"
+ VICTORY_POINTS_4625: "Jonesboro"
+ VICTORY_POINTS_1453: "Baton Rogue"
+ VICTORY_POINTS_1643: "Lafayette"
+ VICTORY_POINTS_7555: "Alexandria"
+ VICTORY_POINTS_12401: "Shreveport"
+ VICTORY_POINTS_3719: "Fargo"
+ VICTORY_POINTS_10595: "Sioux Falls"
+ VICTORY_POINTS_3708: "Lincoln"
+ VICTORY_POINTS_7852: "Grand Island"
+ VICTORY_POINTS_12513: "Manhattan"
+ VICTORY_POINTS_5103: "Oklahoma City"
+ VICTORY_POINTS_11473: "Lawton"
+ VICTORY_POINTS_3972: "Amarillo"
+ VICTORY_POINTS_12301: "Lubbock"
+ VICTORY_POINTS_1998: "Midland"
+ VICTORY_POINTS_2019: "Laredo"
+ VICTORY_POINTS_6785: "Corpus Christi"
+ VICTORY_POINTS_12369: "McAllen"
+ VICTORY_POINTS_6798: "San Angelo"
+ VICTORY_POINTS_1500: "Beaumont"
+ VICTORY_POINTS_10504: "College Station"
+ VICTORY_POINTS_5022: "Austin"
+ VICTORY_POINTS_7981: "Waco"
+ VICTORY_POINTS_1915: "Abilene"
+ VICTORY_POINTS_9920: "Fort Worth"
+ VICTORY_POINTS_2082: "Piano"
+ VICTORY_POINTS_10778: "Tyler"
+ VICTORY_POINTS_7779: "Helena"
+ VICTORY_POINTS_12585: "Billings"
+ VICTORY_POINTS_4723: "Cheyenne"
+ VICTORY_POINTS_10711: "Casper"
+ VICTORY_POINTS_6887: "Grand Junction"
+ VICTORY_POINTS_10588: "Colorado Springs"
+ VICTORY_POINTS_10642: "Santa Fe"
+ VICTORY_POINTS_12791: "Las Cruces"
+ VICTORY_POINTS_9695: "Twin Falls"
+ VICTORY_POINTS_12535: "Pocatello"
+ VICTORY_POINTS_10582: "Ogden"
+ VICTORY_POINTS_10662: "Provo"
+ VICTORY_POINTS_12699: "St George"
+ VICTORY_POINTS_3834: "Tucson"
+ VICTORY_POINTS_1793: "Flagstaff"
+ VICTORY_POINTS_4799: "Las Vegas"
+ VICTORY_POINTS_10422: "Reno"
+ VICTORY_POINTS_7386: "Tacoma"
+ VICTORY_POINTS_10155: "Yakima"
+ VICTORY_POINTS_4328: "Salem"
+ VICTORY_POINTS_528: "Eugene"
+ VICTORY_POINTS_11733: "Medford"
+ VICTORY_POINTS_10271: "Vancouver"
