--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -373,7 +373,7 @@
  STATE_372:0 "Arkansas"
  STATE_373:0 "Missouri"
  STATE_374:0 "Oklahoma"
- STATE_375:0 "Texas"
+ STATE_375:0 "Dallas"
  STATE_376:0 "New Mexico"
  STATE_377:0 "Arizona"
  STATE_378:0 "California"
@@ -1046,3 +1046,8 @@
  STATE_1045: "Cunene"
  STATE_1046: "Cuanza"
  STATE_1047: "West Lunda"
+ STATE_1048: "Texlahoma"
+ STATE_1049: "El Paso"
+ STATE_1050: "San Antonio"
+ STATE_1051: "Houston"
+ STATE_1052: "Austin"
