--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -376,7 +376,7 @@
  STATE_375:0 "Dallas"
  STATE_376:0 "New Mexico"
  STATE_377:0 "Arizona"
- STATE_378:0 "California"
+ STATE_378:0 "North California"
  STATE_379:0 "Nevada"
  STATE_380:0 "Utah"
  STATE_381:0 "Wyoming"
@@ -1051,3 +1051,6 @@
  STATE_1050: "San Antonio"
  STATE_1051: "Houston"
  STATE_1052: "Austin"
+ STATE_1053: "Mojave"
+ STATE_1054: "Los Angeles"
+ STATE_1055: "San Francisco"
