--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1490,3 +1490,20 @@ VICTORY_POINTS_9206_SWE: "Viborg"
  VICTORY_POINTS_528: "Eugene"
  VICTORY_POINTS_11733: "Medford"
  VICTORY_POINTS_10271: "Vancouver"
+ VICTORY_POINTS_4727: "Blythe"
+ VICTORY_POINTS_823: "Palm Springs"
+ VICTORY_POINTS_10387: "Barstow"
+ VICTORY_POINTS_11757: "Irvine"
+ VICTORY_POINTS_7517: "Oceanside"
+ VICTORY_POINTS_11859: "Thousand Oaks"
+ VICTORY_POINTS_9855: "Lancaster"
+ VICTORY_POINTS_9911: "Bakersfield"
+ VICTORY_POINTS_4518: "Fresno"
+ VICTORY_POINTS_3678: "Fremont"
+ VICTORY_POINTS_3677: "San Jose"
+ VICTORY_POINTS_9637: "Santa Cruz"
+ VICTORY_POINTS_6699: "Stockton"
+ VICTORY_POINTS_6694: "Modesto"
+ VICTORY_POINTS_6745: "Santa Rosa"
+ VICTORY_POINTS_3588: "Redding"
+ VICTORY_POINTS_610: "Eureka"
